--- a/koto-weather.html
+++ b/koto-weather.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>江東区の天気</title>
   <style>
-    html, body {
+    body {
+      font-family: sans-serif;
+      text-align: center;
       margin: 0;
-      padding: 0;
-      width: 600px;
-      height: 600px;
-      overflow: hidden;
-    }
-    iframe {
-      border: none;
-      width: 100%;
+      padding: 40px;
+      background: #f0f8ff;
       height: 100%;
+    }
+    h2 {
+      font-size: 1.5em;
+    }
+    #weather {
+      font-size: 1.2em;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://weather.yahoo.co.jp/weather/jp/13/4410/13108.html" title="江東区の天気"></iframe>
+  <h2>江東区の現在の天気</h2>
+  <div id="weather">読み込み中...</div>
+
+  <script>
+    const apiKey = 'YOUR_API_KEY'; // ← OpenWeatherMapのAPIキー
+    const cityId = '1850144'; // 東京都江東区（Tokyo）
+
+    fetch(`https://api.openweathermap.org/data/2.5/weather?id=${cityId}&appid=${apiKey}&lang=ja&units=metric`)
+      .then(response => response.json())
+      .then(data => {
+        const weather = data.weather[0].description;
+        const temp = data.main.temp;
+        const rain = data.rain ? (data.rain["1h"] || 0) : 0;
+        document.getElementById('weather').innerHTML = `
+          天気：${weather}<br>
+          気温：${temp}℃<br>
+          降水量（1時間）：${rain} mm
+        `;
+      })
+      .catch(err => {
+        console.error(err);
+        document.getElementById('weather').innerText = "天気情報の取得に失敗しました。";
+      });
+  </script>
 </body>
 </html>
