--- a/koto-weather.html
+++ b/koto-weather.html
@@ -26,7 +26,7 @@
   <div id="weather">読み込み中...</div>
 
   <script>
-    const apiKey = 'YOUR_API_KEY'; // ← OpenWeatherMapのAPIキー
+    const apiKey = 'b4e296b4adcd2a0f27429c398cc9db84'; // ← OpenWeatherMapのAPIキー
     const cityId = '1850144'; // 東京都江東区（Tokyo）
 
     fetch(`https://api.openweathermap.org/data/2.5/weather?id=${cityId}&appid=${apiKey}&lang=ja&units=metric`)
