--- a/prototype.html
+++ b/prototype.html
@@ -1,1 +1,124 @@
-<div id="ww_a5ea1d395ea1d" v='1.3' loc='id' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/fr/paris/30_jours/" id="ww_a5ea1d395ea1d_u" target="_blank">Meteo paris 30 jours</a></div><script async src="https://app3.weatherwidget.org/js/?id=ww_a5ea1d395ea1d"></script>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=600, height=600, initial-scale=1.0">
+  <title>江東区の天気</title>
+  <style>
+    html, body {
+      width: 600px;
+      height: 600px;
+      margin: 0;
+      padding: 0;
+      background: #f5faff;
+      font-family: sans-serif;
+      color: #333;
+      overflow: hidden;
+    }
+
+    h2 {
+      font-size: 1.1em;
+      margin: 8px 0;
+      padding-left: 10px;
+    }
+
+    .today {
+      display: flex;
+      align-items: center;
+      background: #e0f7ff;
+      padding: 8px;
+      margin: 0 10px;
+      border-radius: 8px;
+      gap: 10px;
+    }
+
+    .today img {
+      width: 48px;
+      height: 48px;
+    }
+
+    .forecast {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 6px;
+      margin: 10px;
+    }
+
+    .day {
+      background: #ffffff;
+      padding: 6px;
+      border-radius: 6px;
+      text-align: center;
+      font-size: 0.8em;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
+    .day img {
+      width: 36px;
+      height: 36px;
+    }
+
+    .high-pop {
+      color: #007BFF;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <h2>江東区の現在の天気</h2>
+  <div class="today" id="today">読み込み中...</div>
+  <h2>週間天気予報</h2>
+  <div class="forecast" id="forecast"></div>
+
+  <script>
+    const apiKey = 'YOUR_API_KEY'; // ← ご自身のAPIキーをここに挿入
+    const lat = 35.6702;
+    const lon = 139.8174;
+
+    fetch(`https://api.openweathermap.org/data/3.0/onecall?lat=${lat}&lon=${lon}&exclude=minutely,hourly,alerts&units=metric&lang=ja&appid=${apiKey}`)
+      .then(res => res.json())
+      .then(data => {
+        const today = data.current;
+        const daily = data.daily;
+
+        // 今日の天気
+        const todayHtml = `
+          <img src="https://openweathermap.org/img/wn/${today.weather[0].icon}@2x.png" alt="天気">
+          <div>
+            <div><strong>${today.weather[0].description}</strong></div>
+            <div>気温：${today.temp.toFixed(1)}℃</div>
+            <div>湿度：${today.humidity}%</div>
+          </div>
+        `;
+        document.getElementById('today').innerHTML = todayHtml;
+
+        // 週間予報（1日目は除外）
+        const days = ['日','月','火','水','木','金','土'];
+        let forecastHtml = '';
+        for (let i = 1; i <= 6; i++) {
+          const d = daily[i];
+          const date = new Date(d.dt * 1000);
+          const label = `${days[date.getDay()]}曜`;
+          const popPercent = Math.round((d.pop || 0) * 100);
+          const popClass = popPercent >= 60 ? 'high-pop' : '';
+
+          forecastHtml += `
+            <div class="day">
+              <div><strong>${label}</strong></div>
+              <img src="https://openweathermap.org/img/wn/${d.weather[0].icon}@2x.png" alt="天気">
+              <div>${d.weather[0].description}</div>
+              <div>${d.temp.min.toFixed(0)}℃ / ${d.temp.max.toFixed(0)}℃</div>
+              <div class="${popClass}">降水確率：${popPercent}%</div>
+            </div>
+          `;
+        }
+
+        document.getElementById('forecast').innerHTML = forecastHtml;
+      })
+      .catch(err => {
+        console.error(err);
+        document.getElementById('today').innerText = "天気情報の取得に失敗しました。";
+      });
+  </script>
+</body>
+</html>
