--- a/prototype.html
+++ b/prototype.html
@@ -10,31 +10,30 @@
       padding: 0;
       width: 600px;
       height: 600px;
-      overflow: hidden;
-      background-color: #000;
+      background-color: #ffffff;
+      font-family: sans-serif;
     }
 
-    #ww_container {
+    #widget-container {
       width: 100%;
       height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      box-sizing: border-box;
+      padding: 10px;
     }
 
     #ww_a5ea1d395ea1d {
       width: 100% !important;
-      max-width: 600px;
       height: 100% !important;
+      overflow: hidden;
     }
 
     #ww_a5ea1d395ea1d a {
-      display: none !important; /* 「More forecasts:」リンクを非表示に */
+      display: none !important;
     }
   </style>
 </head>
 <body>
-  <div id="ww_container">
+  <div id="widget-container">
     <div id="ww_a5ea1d395ea1d"
          v="1.3"
          loc="id"
@@ -46,15 +45,15 @@
            "font":"Arial",
            "sl_ics":"one_a",
            "sl_sot":"celsius",
-           "cl_bkg":"image",
-           "cl_font":"#FFFFFF",
-           "cl_cloud":"#FFFFFF",
+           "cl_bkg":"white",
+           "cl_font":"#333333",
+           "cl_cloud":"#666666",
            "cl_persp":"#81D4FA",
            "cl_sun":"#FFC107",
            "cl_moon":"#FFC107",
            "cl_thund":"#FF5722"
          }'>
-      天気情報を読み込み中…
+      読み込み中…
     </div>
   </div>
   <script async src="https://app3.weatherwidget.org/js/?id=ww_a5ea1d395ea1d"></script>
