--- a/prototype.html
+++ b/prototype.html
@@ -1,108 +1,59 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>江東区の天気</title>
-  <meta name="viewport" content="width=600,height=600">
+  <meta charset="UTF-8" />
+  <title>江東区 天気 - Horizontal Hour by Hour</title>
+  <meta name="viewport" content="width=600, height=600" />
   <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
+    html, body {
+      margin: 0; padding: 0;
+      width: 600px; height: 600px;
+      overflow: hidden;
+      background-color: #000; /* 黒背景で見やすく */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+    }
+    #ww_container {
       width: 600px;
       height: 600px;
-      background-color: #f0f0f0;
+    }
+    #ww_widget {
+      width: 100% !important;
+      height: 100% !important;
       overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
-    h1 {
-      font-size: 24px;
-      margin: 10px 0;
-    }
-    #current {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    #forecast {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      width: 100%;
-    }
-    .day {
-      width: 90px;
-      margin: 5px;
-      background-color: white;
-      border-radius: 10px;
-      padding: 10px;
-      box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-    .precip {
-      font-weight: bold;
-    }
-    .precip.high {
-      color: blue;
-    }
-    img {
-      width: 50px;
-      height: 50px;
+    /* リンク非表示 */
+    #ww_widget a {
+      display: none !important;
     }
   </style>
 </head>
 <body>
-  <h1>江東区の天気</h1>
-  <div id="current">読み込み中...</div>
-  <div id="forecast"></div>
+  <div id="ww_container">
+    <div id="ww_widget"
+      v="1.3"
+      loc="id"
+      a='{
+        "t":"hourly",
+        "lang":"ja",
+        "ids":[{"id":"1850147","name":"江東区"}],
+        "font":"Arial",
+        "sl_lpl":1,
+        "cl_bkg":"black",
+        "cl_font":"#ffffff",
+        "cl_cloud":"#bbbbbb",
+        "cl_persp":"#81D4FA",
+        "cl_sun":"#FFC107",
+        "cl_moon":"#FFC107",
+        "cl_thund":"#FF5722"
+      }'
+    >
+      天気情報を読み込み中…
+    </div>
+  </div>
 
-  <script>
-    const apiKey = 'ea07e3eb26d73ffdba26e2b0161cc751'; // ←ここにご自身のAPIキーを入力
-    const lat = 35.6731;
-    const lon = 139.8173;
-    const apiUrl = `https://api.openweathermap.org/data/2.5/onecall?lat=${lat}&lon=${lon}&exclude=minutely,hourly,alerts&units=metric&lang=ja&appid=${apiKey}`;
-
-    fetch(apiUrl)
-      .then(response => response.json())
-      .then(data => {
-        const current = data.current;
-        const daily = data.daily;
-
-        const currentHTML = `
-          <div>
-            <img src="https://openweathermap.org/img/wn/${current.weather[0].icon}@2x.png" alt="${current.weather[0].description}">
-            <div>${current.weather[0].description}</div>
-            <div>${Math.round(current.temp)}℃</div>
-            <div class="precip ${daily[0].pop * 100 >= 60 ? 'high' : ''}">
-              降水確率: ${Math.round(daily[0].pop * 100)}%
-            </div>
-          </div>
-        `;
-        document.getElementById("current").innerHTML = currentHTML;
-
-        const forecast = document.getElementById("forecast");
-        for (let i = 1; i <= 6; i++) {
-          const day = daily[i];
-          const date = new Date(day.dt * 1000);
-          const label = `${date.getMonth()+1}/${date.getDate()}`;
-          const pop = Math.round(day.pop * 100);
-          const popClass = pop >= 60 ? 'high' : '';
-
-          const dayHTML = `
-            <div class="day">
-              <div>${label}</div>
-              <img src="https://openweathermap.org/img/wn/${day.weather[0].icon}@2x.png" alt="${day.weather[0].description}">
-              <div>${Math.round(day.temp.max)}℃ / ${Math.round(day.temp.min)}℃</div>
-              <div class="precip ${popClass}">降水: ${pop}%</div>
-            </div>
-          `;
-          forecast.insertAdjacentHTML('beforeend', dayHTML);
-        }
-      })
-      .catch(err => {
-        document.getElementById("current").textContent = "天気情報の取得に失敗しました。";
-        console.error(err);
-      });
-  </script>
+  <script async src="https://app3.weatherwidget.org/js/?id=ww_widget"></script>
 </body>
 </html>
