--- a/prototype.html
+++ b/prototype.html
@@ -2,58 +2,27 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>江東区 天気 - Horizontal Hour by Hour</title>
-  <meta name="viewport" content="width=600, height=600" />
+  <title>天気ウィジェットテスト</title>
   <style>
     html, body {
       margin: 0; padding: 0;
       width: 600px; height: 600px;
-      overflow: hidden;
-      background-color: #000; /* 黒背景で見やすく */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
-    #ww_container {
-      width: 600px;
-      height: 600px;
+      background: white;
+      color: black;
     }
     #ww_widget {
-      width: 100% !important;
-      height: 100% !important;
-      overflow: hidden;
-    }
-    /* リンク非表示 */
-    #ww_widget a {
-      display: none !important;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <div id="ww_container">
-    <div id="ww_widget"
-      v="1.3"
-      loc="id"
-      a='{
-        "t":"hourly",
-        "lang":"ja",
-        "ids":[{"id":"1850147","name":"江東区"}],
-        "font":"Arial",
-        "sl_lpl":1,
-        "cl_bkg":"black",
-        "cl_font":"#ffffff",
-        "cl_cloud":"#bbbbbb",
-        "cl_persp":"#81D4FA",
-        "cl_sun":"#FFC107",
-        "cl_moon":"#FFC107",
-        "cl_thund":"#FF5722"
-      }'
-    >
-      天気情報を読み込み中…
-    </div>
+  <div id="ww_widget"
+    v="1.3"
+    loc="id"
+    a='{"t":"hourly","lang":"ja","ids":[{"id":"1850147","name":"東京"}],"font":"Arial"}'>
+    読み込み中…
   </div>
-
   <script async src="https://app3.weatherwidget.org/js/?id=ww_widget"></script>
 </body>
 </html>
