--- a/prototype.html
+++ b/prototype.html
@@ -2,17 +2,28 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>天気ウィジェットテスト</title>
+  <title>江東区 天気 - Horizontal Hour by Hour</title>
+  <meta name="viewport" content="width=600, height=600" />
   <style>
     html, body {
       margin: 0; padding: 0;
       width: 600px; height: 600px;
-      background: white;
-      color: black;
+      background: #fff;
+      color: #000;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     #ww_widget {
-      width: 100%;
-      height: 100%;
+      width: 100% !important;
+      height: 100% !important;
+      overflow: hidden;
+    }
+    /* リンクを非表示にする */
+    #ww_widget a {
+      display: none !important;
     }
   </style>
 </head>
@@ -20,9 +31,23 @@
   <div id="ww_widget"
     v="1.3"
     loc="id"
-    a='{"t":"hourly","lang":"ja","ids":[{"id":"1850147","name":"東京"}],"font":"Arial"}'>
-    読み込み中…
+    a='{
+      "t":"hourly",
+      "lang":"ja",
+      "ids":[{"id":"1850147","name":"江東区"}],
+      "font":"Arial",
+      "cl_bkg":"white",
+      "cl_font":"#000000",
+      "cl_cloud":"#666666",
+      "cl_persp":"#81D4FA",
+      "cl_sun":"#FFC107",
+      "cl_moon":"#FFC107",
+      "cl_thund":"#FF5722"
+    }'
+  >
+    天気情報を読み込み中…
   </div>
+
   <script async src="https://app3.weatherwidget.org/js/?id=ww_widget"></script>
 </body>
 </html>
