--- a/prototype.html
+++ b/prototype.html
@@ -1,53 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>江東区 天気 - Horizontal Hour by Hour</title>
-  <meta name="viewport" content="width=600, height=600" />
-  <style>
-    html, body {
-      margin: 0; padding: 0;
-      width: 600px; height: 600px;
-      background: #fff;
-      color: #000;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    #ww_widget {
-      width: 100% !important;
-      height: 100% !important;
-      overflow: hidden;
-    }
-    /* リンクを非表示にする */
-    #ww_widget a {
-      display: none !important;
-    }
-  </style>
-</head>
-<body>
-  <div id="ww_widget"
-    v="1.3"
-    loc="id"
-    a='{
-      "t":"hourly",
-      "lang":"ja",
-      "ids":[{"id":"1850147","name":"江東区"}],
-      "font":"Arial",
-      "cl_bkg":"white",
-      "cl_font":"#000000",
-      "cl_cloud":"#666666",
-      "cl_persp":"#81D4FA",
-      "cl_sun":"#FFC107",
-      "cl_moon":"#FFC107",
-      "cl_thund":"#FF5722"
-    }'
-  >
-    天気情報を読み込み中…
-  </div>
-
-  <script async src="https://app3.weatherwidget.org/js/?id=ww_widget"></script>
-</body>
-</html>
+<a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="Tokyo" data-label_2="WEATHER" data-theme="original" >Tokyo WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
