--- a/prototype.html
+++ b/prototype.html
@@ -16,10 +16,10 @@
         </script>
 
         <div class="tomorrow"
-           data-location-id="064500"
-           data-language="EN"
+           data-location-id=""
+           data-language="JA"
            data-unit-system="METRIC"
-           data-skin="light"
+           data-skin="dark"
            data-widget-type="upcoming"
            style="padding-bottom:22px;position:relative;"
         >
