--- a/prototype.html
+++ b/prototype.html
@@ -1,40 +1,39 @@
-<div style="width:600px; height:600px; background-color:#000;">
-  <script>
-    (function(d, s, id) {
-      if (d.getElementById(id)) {
-        if (window.__TOMORROW__) {
-          window.__TOMORROW__.renderWidget();
-        }
-        return;
-      }
-      const fjs = d.getElementsByTagName(s)[0];
-      const js = d.createElement(s);
-      js.id = id;
-      js.src = "https://www.tomorrow.io/v1/widget/sdk/sdk.bundle.min.js";
-      fjs.parentNode.insertBefore(js, fjs);
-    })(document, 'script', 'tomorrow-sdk');
-  </script>
+<script>
+        (function(d, s, id) {
+            if (d.getElementById(id)) {
+                if (window.__TOMORROW__) {
+                    window.__TOMORROW__.renderWidget();
+                }
+                return;
+            }
+            const fjs = d.getElementsByTagName(s)[0];
+            const js = d.createElement(s);
+            js.id = id;
+            js.src = "https://www.tomorrow.io/v1/widget/sdk/sdk.bundle.min.js";
 
-  <div class="tomorrow"
-       data-location-id=""
-       data-language="JA"
-       data-unit-system="METRIC"
-       data-skin="dark"
-       data-widget-type="upcoming"
-       style="padding-bottom:22px; position:relative; background-color:#000;"
-  >
-    <a
-      href="https://weather.tomorrow.io/"
-      rel="nofollow noopener noreferrer"
-      target="_blank"
-      style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;"
-    >
-      <img
-        alt="Powered by Tomorrow.io"
-        src="https://weather-website-client.tomorrow.io/img/powered-by.svg"
-        width="250"
-        height="18"
-      />
-    </a>
-  </div>
-</div>
+            fjs.parentNode.insertBefore(js, fjs);
+        })(document, 'script', 'tomorrow-sdk');
+        </script>
+
+        <div class="tomorrow"
+           data-location-id="064500"
+           data-language="JA"
+           data-unit-system="METRIC"
+           data-skin="light"
+           data-widget-type="upcoming"
+           style="padding-bottom:22px;position:relative;"
+        >
+          <a
+            href="https://weather.tomorrow.io/"
+            rel="nofollow noopener noreferrer"
+            target="_blank"
+            style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;"
+          >
+            <img
+              alt="Powered by Tomorrow.io"
+              src="https://weather-website-client.tomorrow.io/img/powered-by.svg"
+              width="250"
+              height="18"
+            />
+          </a>
+        </div>
